[gd_scene load_steps=7 format=3 uid="uid://b256rltagayaq"]

[ext_resource type="Script" path="res://radar.gd" id="1_o1pn8"]
[ext_resource type="Texture2D" uid="uid://v4pf6o1erdpw" path="res://assets/apps/radar/praha.jpg" id="2_6fi0h"]
[ext_resource type="FontFile" uid="uid://onwv1b6vwwk2" path="res://assets/fonts/OpenSans-Bold.ttf" id="2_celno"]
[ext_resource type="Texture2D" uid="uid://d2pbsu6ek1m5m" path="res://assets/apps/close.png" id="3_2g1ak"]
[ext_resource type="Texture2D" uid="uid://b8485xtxwrast" path="res://assets/apps/radar/brno.png" id="3_i00pd"]
[ext_resource type="Texture2D" uid="uid://83q4un17p7kv" path="res://assets/apps/radar/grid.png" id="4_imgnq"]

[node name="Radar" type="Control"]
layout_mode = 3
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1pn8")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Padding" type="ColorRect" parent="HBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Padding" type="ColorRect" parent="HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Button1" type="Button" parent="HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "PRAGUE"

[node name="Button2" type="Button" parent="HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "BRNO"

[node name="Padding2" type="ColorRect" parent="HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Padding2" type="ColorRect" parent="HBoxContainer2"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Map1" type="TextureRect" parent="HBoxContainer2/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("2_6fi0h")
expand_mode = 1
stretch_mode = 6

[node name="Map2" type="TextureRect" parent="HBoxContainer2/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("3_i00pd")
expand_mode = 1
stretch_mode = 6

[node name="Grid" type="TextureRect" parent="HBoxContainer2/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_imgnq")
expand_mode = 1
stretch_mode = 6

[node name="Radar" type="ColorRect" parent="HBoxContainer2/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="WindowBarBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
grow_horizontal = 2
color = Color(0.321569, 0.721569, 0.8, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.1
grow_horizontal = 2

[node name="Padding1" type="ColorRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_celno")
text = "RADAR VIEW"

[node name="Padding2" type="ColorRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 0)

[node name="Close" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
texture_normal = ExtResource("3_2g1ak")
texture_pressed = ExtResource("3_2g1ak")
texture_hover = ExtResource("3_2g1ak")
texture_disabled = ExtResource("3_2g1ak")
ignore_texture_size = true
stretch_mode = 5

[node name="Padding4" type="ColorRect" parent="HBoxContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0)

[connection signal="pressed" from="HBoxContainer2/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Close" to="." method="_on_close_pressed"]
